# prj-2

./: .gitignore  HANDOFF.md  README.md  compose.yaml  singlearm.repos
docker/: agent.Dockerfile  sim.Dockerfile
media/: w1_sim_bringup_1.webm  w1_sim_bringup_2.webm
src/arm_agent/: package.xml  setup.cfg  setup.py
src/arm_agent/agent/: agent.py
src/arm_interfaces/: CMakeLists.txt  package.xml
src/arm_interfaces/action/: MoveTo.action  Pick.action  Place.action
src/arm_interfaces/msg/: ErrorCode.msg  FailureReport.msg  Stage.msg
src/arm_kinematics/: CMakeLists.txt  package.xml
src/arm_kinematics/include/arm_kinematics/: ik.hpp
src/arm_kinematics/src/: ik.cpp
src/arm_kinematics/test/: test_ik.cpp
src/arm_skills_mock/: package.xml  setup.cfg  setup.py
src/arm_skills_mock/arm_skills_mock/: mock_skills.py
